--- a/src/landkid/html/pado.html
+++ b/src/landkid/html/pado.html
@@ -4,13 +4,22 @@
     <meta charset="UTF-8">
     <title>Pado</title>
     <link rel="stylesheet" href="../css/reset.css">
+    <link rel="stylesheet" href="../css/jquery-ui.min.css">
+    <link rel="stylesheet" href="../css/jquery-ui.structure.min.css">
+    <link rel="stylesheet" href="../css/jquery-ui.theme.min.css">
     <link rel="stylesheet" href="../css/pado.css">
+
 </head>
 <body>
-<div id="round-rect">
-    <canvas id="pado" width="1000" height="1000"></canvas>
-</div>
+<canvas id="pado"></canvas>
 
+<div class="slider"></div>
+<div class="slider-label"></div>
+
+<script type="text/javascript" src="../js/jquery.js"></script>
+<script type="text/javascript" src="../js/jquery-ui.min.js"></script>
+<script type="text/javascript" src="../js/opus.js"></script>
 <script type="text/javascript" src="../js/pado.js"></script>
+
 </body>
 </html>
