--- a/src/landkid/html/responsive-test.html
+++ b/src/landkid/html/responsive-test.html
@@ -3,6 +3,8 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/responsive-test.css">
+    <link rel="stylesheet" href="../css/responsive-test-mw-768px.css" media="screen and (min-width: 768px)">
+    <link rel="stylesheet" href="../css/responsive-test-mw-480px.css" media="screen and (min-width: 480px) and (max-width: 768px)">
 </head>
 <body>
 
