--- a/src/landkid/html/pado.html
+++ b/src/landkid/html/pado.html
@@ -13,6 +13,7 @@
 </head>
 <body>
 <canvas id="pado"></canvas>
+<canvas id="moon"></canvas>
 
 <div class="slider"></div>
 <div class="slider-label"></div>
