--- a/src/landkid/html/responsive-test.html
+++ b/src/landkid/html/responsive-test.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../css/responsive-test.css">
-    <link rel="stylesheet" href="../css/responsive-test-mw-768px.css" media="screen and (min-width: 768px)">
-    <link rel="stylesheet" href="../css/responsive-test-mw-480px.css" media="screen and (min-width: 480px) and (max-width: 768px)">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, max-scale=1.0, user-scalable=0">
+    <link rel="stylesheet" href="../css/responsive-test.css" media="only screen">
+    <link rel="stylesheet" href="../css/responsive-test-mw-400px.css" media="only print">
+    <link rel="stylesheet" href="../css/responsive-test-mw-768px.css" media="only screen and (min-width: 768px) and (max-width: 1279px)">
+    <link rel="stylesheet" href="../css/responsive-test-mw-1280px.css" media="only screen and (min-width: 1280px)">
 </head>
 <body>
 
@@ -43,6 +44,27 @@
             <p>Crete is a Greek island in the Mediterranean Sea.</p>
             <h2>How?</h2>
             <p>You can reach Chania airport from all over Europe.</p>
+        </div>
+    </div>
+
+    <img class="image" src="../img/sample-photo-1.jpg"/>
+
+
+</div>
+
+<div class="row-2">
+
+    <div class="animate-test-a col-3 left">
+        <div class="aside">
+            <h2>when?</h2>
+            <p>Chania is a city on the island of Crete.</p>
+        </div>
+    </div>
+
+    <div class="animate-test-b col-3 right">
+        <div class="aside">
+            <h2>Who?</h2>
+            <p>Chania is a city on the island of Crete.</p>
         </div>
     </div>
 
