--- a/src/landkid/html/gs.html
+++ b/src/landkid/html/gs.html
@@ -10,9 +10,9 @@
 <body>
 
 <ul class="scroll-navi">
-    <li>C1</li>
-    <li>C2</li>
-    <li>C3</li>
+    <li><a href="#">C1</a></li>
+    <li><a href="#">C2</a></li>
+    <li><a href="#">C3</a></li>
 </ul>
 
 <div class="container">
