--- a/src/landkid/html/gs.html
+++ b/src/landkid/html/gs.html
@@ -197,8 +197,9 @@
                 for (var i = 0; i <= currentContent; i++) {
                     contentHeight += getComponentHeight(containers[i]);
                 }
+                window.scrollTo(0, contentHeight - getComponentHeight(containers[currentContent]));
 
-                smoothScrollTo(0, contentHeight - getComponentHeight(containers[currentContent]));
+//                smoothScrollTo(0, contentHeight - getComponentHeight(containers[currentContent]));
 
             }, 300);
 
@@ -213,7 +214,8 @@
                     }
                     (function (i, targetScrollY) {
                         scrollNavi[i].addEventListener('click', function (e) {
-                            smoothScrollTo(0, targetScrollY);
+                            window.scrollTo(0, targetScrollY);
+                            //smoothScrollTo(0, targetScrollY);
                             e.preventDefault();
                         }, false);
                     })(i, targetScrollY);
