--- a/src/landkid/html/gs.html
+++ b/src/landkid/html/gs.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, max-scale=1.0, user-scalable=0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0">
     <link rel="stylesheet" href="../css/normalize.css"/>
     <link rel="stylesheet" href="../css/grid.css"/>
+    <link rel="stylesheet" href="../css/gs.css"/>
 </head>
 <body>
 
