--- a/src/landkid/html/pado.html
+++ b/src/landkid/html/pado.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Pado</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0">
 
     <link rel="stylesheet" href="../css/reset.css">
     <link rel="stylesheet" href="../css/jquery-ui.min.css">
