- hahamia2 메뉴 임시 추가

--- a/src/index.html
+++ b/src/index.html
@@ -14,6 +14,7 @@
     <a href="/" id="gnb-logo"><img src="/doc/img/tmp-logo.png" alt="임시로고"></a>
     <a href="/landkid/html/main.html" id="landkid">LandKid</a>
     <a href="#" id="hahamia">Hahamia</a>
+    <a href="#" id="hahamia">Hahamia2</a>
 </section>
 <section id="contents">
 
