- react 적용 완료 - react build를 위한 webpack, babel 환경 세팅 적용 - gulp+webpack 적용
TODO
- react를 활용한 contents 페이지 동적전환
- 레이아웃을 개별 컴포넌트로 쪼개기

--- a/src/index.html
+++ b/src/index.html
@@ -7,13 +7,13 @@
     <link rel="stylesheet" href="doc/css/index-style.css">
     <script src="doc/js/jquery-3.2.1.min.js"></script>
     <script src="//naver.github.io/egjs-infinitegrid/release/latest/dist/infinitegrid.pkgd.js"></script>
-    <script src="doc/js/index.js"></script>
+
 </HEAD>
 <BODY>
 <section id="gnb">
     <a href="/" id="gnb-logo"><img src="/doc/img/tmp-logo.png" alt="임시로고"></a>
     <a href="/landkid/html/main.html" id="landkid">LandKid</a>
-    <a href="#" id="hahamia">Hahamia</a>
+    <a href="/hahamia/html/index.html" id="hahamia">Hahamia</a>
     <a href="#" id="hahamia">Hahamia2</a>
 </section>
 <section id="contents">
@@ -26,7 +26,7 @@
 </section>
 
 
-
+<script src="/doc/js/bundle.js"></script>
 <script>
     $(document).ready(function(){
 
