--- a/src/landkid/html/main.html
+++ b/src/landkid/html/main.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <title>Landkid's Portfolio</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0">
-    <link rel="stylesheet" href="/landkid/css/normalize.css"/>
-    <link rel="stylesheet" href="/landkid/css/grid.css"/>
-    <link rel="stylesheet" href="/landkid/css/main.css"/>
+    <link rel="stylesheet" href="../css/normalize.css"/>
+    <link rel="stylesheet" href="../css/grid.css"/>
+    <link rel="stylesheet" href="../css/main.css"/>
 
 </head>
 <body>
@@ -23,29 +23,15 @@
     </header>
     <div class="content">
         <div class="container">
-            <ul class="list container">
-                <!--<li class="item">
-                    <div class="item-date">
-                        2017/9/30
-                    </div>
-                    <div class="item-title">
-                        Responsive web test
-                    </div>
-                    <div class="item-description">
-                        반응형 웹 가이드를 위한 프로토타입.
-                    </div>
-                    <iframe src="/landkid/html/gs.html" scrolling="no" border="no" maginwidth="0" marginheight="0" frameborder="0" ></iframe>
-                    <div class="link"><a href="/landkid/html/gs.html">보러 가기</a></div>
-                    <div style="width: 100px;margin-left: auto;margin-right:auto;margin-top:2rem;"><hr></div>
-                </li>-->
-            </ul>
+            <ul class="list container"></ul>
         </div>
     </div>
     <footer>
         <div class="copyright">Written by Deokyoung</div>
     </footer>
 </div>
-<script type="text/javascript" src="/landkid/js/main.js"></script>
+<script type="text/javascript" src="../js/opus.js"></script>
+<script type="text/javascript" src="../js/main.js"></script>
 
 </body>
 </html>
